# torchquad

./: .flake8  .gitignore  .readthedocs.yml  CITATION.cff  README.md  benchmark_utils.py  environment.yml  environment_all_backends.yml  logger_test.py  pyproject.toml  requirements.txt  rtd_environment.yml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release.md
.github/workflows/: autoblack.yml  deploy_to_pypi.yml  deploy_to_test_pypi.yml  draft-pdf.yml  get_test_coverage_on_push_or_PR.yml  run_tests.yml  run_tests_on_push_or_PR.yml
benchmarking/: benchmarking_cfg.toml  framework_worker.py  modular_benchmark.py  plot_results.py  profile_parametric_integration.py  quadpack_vs_scipy_benchmark.py
docs/: autodoc.rst  conf.py  conf.py.orig  index.rst  install.rst
docs/source/: autodoc.rst  ci_cd.rst  conf.py  contact.rst  contributing.rst  index.rst  install.rst  integration_methods.rst  tutorial.rst
notebooks/: Adaptive_Tests.ipynb  Benchmark_notebook.ipynb  Evaluation_notebook.ipynb  Example notebook.ipynb  Example_notebook.ipynb  Torchquad - Example notebook.ipynb  Untitled.ipynb
paper/: paper.bib  paper.md
resources/: convergence_results.json
tests/: boole_test.py  compare_quadpack_implementations.py  gauss_test.py  gradient_test.py  helper_functions.py  integration_grid_test.py  integration_test_functions.py  integrator_types_test.py  monte_carlo_test.py  quadpack_integration_test.py  quadpack_qagi_test.py  quadpack_qags_test.py  quadpack_qawc_test.py  quadpack_qng_test.py  quadpack_vs_scipy_test.py  rng_test.py  simpson_test.py  test_deployment.py  trapezoid_test.py  utils_integration_test.py  vegas_map_test.py  vegas_stratification_test.py  vegas_test.py
torchquad/: __init__.py
torchquad/integration/: __init__.py  adaptive_boole.py  adaptive_grid.py  adaptive_newton_cotes.py  adaptive_simpson.py  adaptive_trapezoid.py  base_integrator.py  boole.py  gauss_legendre.py  gaussian.py  grid_integrator.py  integration_grid.py  monte_carlo.py  newton_cotes.py  rng.py  simpson.py  simpson_1D.py  trapezoid.py  trapezoid_1D.py  utils.py  vegas.py  vegas_map.py  vegas_stratification.py
torchquad/integration/quadpack/: __init__.py  base_quadpack.py  extrapolation.py  gauss_kronrod.py  qag.py  qagi.py  qags.py  qawc.py  qng.py  subdivision.py
torchquad/plots/: plot_adaptive_grid.py  plot_convergence.py  plot_runtime.py
torchquad/tests/: adaptive_boole_test.py  adaptive_simpson_test.py  adaptive_trap_test.py  boole_test.py  complex_number_test.py  complex_test.py  gauss_test.py  gradient_test.py  helper_functions.py  integration_grid_test.py  integration_test_functions.py  integration_test_utils.py  integrator_types_test.py  monte_carlo_test.py  rng_test.py  simpson_1D_test.py  simpson_test.py  trapezoid_1D_test.py  trapezoid_test.py  utils_integration_test.py  vegas_map_test.py  vegas_stratification_test.py  vegas_test.py
torchquad/utils/: __init__.py  benchmark_utils.py  deployment_test.py  enable_cuda.py  get_logger.py  set_log_level.py  set_precision.py  set_up_backend.py  torch_trace_without_warnings.py
